# 9P

./: .dockerignore  CLASSIFICATION_OPTIMIZATION.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  alembic.ini  docker-compose-mac.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.bat  start.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: globals.css  layout.tsx  page.tsx
app/analysis/[id]/: page.tsx
app/api/classify/: route.ts
app/api/insights/: route.ts
app/api/reddit/search/: route.ts
app/api/test-anthropic/: route.ts
app/api/test-reddit/: route.ts
app/components/: Navigation.tsx
app/settings/: page.tsx
control/: __init__.py  main.py
control/core/: __init__.py  config.py  database.py
control/models/: __init__.py  social_media.py
control/routers/: __init__.py  classify.py  export.py  health.py  ingest.py  items.py  metrics.py  summary.py
control/schemas/: __init__.py  social_media.py
docker/: .gitkeep  Dockerfile  docker-compose.yml  init-db.sql  nginx.conf
inference/: __init__.py  classification_schema.py  vllm_client.py  vllm_server.py
infra/terraform/: .gitkeep
lib/: constants.ts  supabase.ts
ml/: __init__.py
ml/classification/: nine_p_classifier.py
ml/embeddings/: text_embedder.py
ml/sentiment/: sentiment_analyzer.py
supabase/: schema.sql
supabase/migrations/: 003_add_insights_table.sql  004_refactor_posts_many_to_many.sql
types/: analysis.ts  classification.ts  reddit.ts
web/: __init__.py  main.py
web/pages/: compare_brands.py  deep_dive.py  exports.py  overview.py
web/utils/: api_client.py
worker/: __init__.py  main.py
worker/tasks/: __init__.py  aggregate_monthly.py  classify_posts.py  ingest_reddit.py  ingest_twitter.py
